# math

./: .gitignore  CMakeLists.txt  README.md  build.sh  mathtest.cpp  test.sh
MathLib/: CMakeLists.txt  test_vector.cpp  vector.cpp  vector.h
include/jmath/: vector.hpp
src/: CMakeLists.txt  MathConfig.h.in  vector.cpp  vector.h
test/: CMakeLists.txt  Tests.cpp
tests/: CMakeLists.txt  testlib.cpp
